Closes #12: Update application name of Discovery service and Config server.

--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=youtube-clone-config-server
+spring.application.name=config-server
 server.port=8012
 
 spring.cloud.config.server.git.uri=https://github.com/CryptoSingh1337/youtube-clone-config-server.git
