--- a/DiscoveryService/src/main/resources/application.properties
+++ b/DiscoveryService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=youtube-clone-discovery-service
+spring.application.name=discovery-service
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
