--- a/ConfigServer/src/main/resources/bootstrap.properties
+++ b/ConfigServer/src/main/resources/bootstrap.properties
@@ -1,3 +1,1 @@
-encrypt.key-store.location=${encryptFile}
-encrypt.key-store.password=${password}
-encrypt.key-store.alias=${alias}
+encrypt.key=${encryptKey}
