--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,2 +1,10 @@
+server.port=0
 spring.application.name=user-ws
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+spring.config.import=optional:configserver:http://localhost:8012
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
