--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=0
 spring.application.name=user-ws
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+logging.level.com.saransh.userservice=debug
+
+spring.data.mongodb.uri=mongodb://localhost:27017/users
 
 spring.config.import=optional:configserver:http://localhost:8012
 
