Updated the max age for access and refresh tokens.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=5000
+spring.application.name=VidFlow-Backend
+logging.level.com.saransh.vidflow=debug
 
+auth.login.path=/users/login
+auth.register.path=/api/v1/user/register
+
+jwt.token.secret=${JWT_ACCESS_TOKEN_SECRET}
+jwt.refresh.token.secret=${JWT_REFRESH_TOKEN_SECRET}
+jwt.issuer=VidFlow
+jwt.token.expiration=86400
+jwt.refresh.token.expiration=129600
+
+spring.data.mongodb.uri=mongodb://localhost:27017/users
+spring.data.mongodb.auto-index-creation=true
