Updated MongoDB URI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ jwt.issuer=VidFlow
 jwt.token.expiration=86400000
 jwt.refresh.token.expiration=129600000
 
-spring.data.mongodb.uri=mongodb://localhost:27017/users
+spring.data.mongodb.uri=${MONGO_URL}
 spring.data.mongodb.auto-index-creation=true
