--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ jwt.refresh.token.expiration=129600000
 
 spring.data.mongodb.uri=${MONGO_URL}
 spring.data.mongodb.auto-index-creation=true
+
+api.pagination.video.page_size=10
+skipUrls=/api/v1/video,/api/v1/video/trending
