Closes #24: Modified CustomAuthorizationFilter to filter out unprotected routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.data.mongodb.uri=${MONGO_URL}
 spring.data.mongodb.auto-index-creation=true
 
 api.pagination.video.page_size=10
-skipUrls=/api/v1/video,/api/v1/video/trending
+skipUrls=/api/v1/video,/api/v1/video/trending,/api/v1/video/{videoId}
