Closes #26: Add functionality to upload video and thumbnail.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,27 @@ server.port=5000
 spring.application.name=VidFlow-Backend
 logging.level.com.saransh.vidflow=debug
 
-auth.login.path=/api/v1/users/login
-auth.register.path=/api/v1/user/register
+# Servlet
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
+# Authentication
 jwt.token.secret=${JWT_ACCESS_TOKEN_SECRET}
 jwt.refresh.token.secret=${JWT_REFRESH_TOKEN_SECRET}
 jwt.issuer=VidFlow
 jwt.token.expiration=86400000
 jwt.refresh.token.expiration=129600000
 
+# MongoDB
 spring.data.mongodb.uri=${MONGO_URL}
 spring.data.mongodb.auto-index-creation=true
 
+# Azure
+storage.connection.string=${AZURE_STORAGE_CONNECTION_STRING}
+storage.blob.container.name=${BLOB_CONTAINER_NAME}
+
+# Custom
+auth.login.path=/api/v1/users/login
+auth.register.path=/api/v1/user/register
 api.pagination.video.page_size=10
 skipUrls=/api/v1/video,/api/v1/video/trending,/api/v1/video/{videoId}
