--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ storage.blob.container.name=${BLOB_CONTAINER_NAME}
 auth.login.path=/api/v1/users/login
 auth.register.path=/api/v1/user/register
 api.pagination.video.page_size=10
-skipUrls=/api/v1/video,/api/v1/video/trending,/api/v1/video/{videoId}
+skipUrls=/api/v1/video,/api/v1/video/trending,/api/v1/video/{videoId},/api/v1/video/views/{videoId}
