--- a/VidFlowNetwork/pom.xml
+++ b/VidFlowNetwork/pom.xml
@@ -14,9 +14,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowData</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
