--- a/VidFlowUtilities/pom.xml
+++ b/VidFlowUtilities/pom.xml
@@ -14,9 +14,39 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowData</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowNetwork</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
