--- a/VidFlowWeb/pom.xml
+++ b/VidFlowWeb/pom.xml
@@ -26,6 +26,31 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowData</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowNetwork</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowSecurity</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowService</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.saransh</groupId>
+			<artifactId>VidFlowUtilities</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -48,35 +73,6 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.version}</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.mapstruct</groupId>
-							<artifactId>mapstruct-processor</artifactId>
-							<version>${org.mapstruct.version}</version>
-						</path>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>${lombok.version}</version>
-						</path>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok-mapstruct-binding</artifactId>
-							<version>${lombok.mapstruct.binding.version}</version>
-						</path>
-					</annotationProcessorPaths>
-					<compilerArgs>
-						<compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
