Fix #38: Migrate to Spring Boot 3

--- a/VidFlowWeb/src/main/resources/application-dev.yml
+++ b/VidFlowWeb/src/main/resources/application-dev.yml
@@ -4,6 +4,11 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/vidflow
 
+# Logging
+logging:
+  level:
+    com.saransh: debug
+
 # JWT
 jwt:
   token:
