--- a/VidFlowWeb/src/main/resources/application-dev.yml
+++ b/VidFlowWeb/src/main/resources/application-dev.yml
@@ -9,6 +9,12 @@ logging:
   level:
     com.saransh: debug
 
+# AWS
+aws:
+  s3:
+    access-key: ${S3_ACCESS_KEY}
+    secret-key: ${S3_SECRET_KEY}
+
 # JWT
 jwt:
   token:
