--- a/VidFlowWeb/src/main/resources/application-prod.yml
+++ b/VidFlowWeb/src/main/resources/application-prod.yml
@@ -4,6 +4,12 @@ spring:
     mongodb:
       uri: ${MONGO_URI}
 
+# AWS
+aws:
+  s3:
+    access-key: ${S3_ACCESS_KEY}
+    secret-key: ${S3_SECRET_KEY}
+
 # JWT
 jwt:
   token:
