--- a/VidFlowWeb/src/main/resources/application-dev.yml
+++ b/VidFlowWeb/src/main/resources/application-dev.yml
@@ -11,6 +11,8 @@ logging:
 
 # AWS
 aws:
+  cloud-front:
+    base: ${CLOUD_FRONT_BASE}
   s3:
     access-key: ${S3_ACCESS_KEY}
     secret-key: ${S3_SECRET_KEY}
