--- a/VidFlowWeb/src/main/resources/application-prod.yml
+++ b/VidFlowWeb/src/main/resources/application-prod.yml
@@ -6,6 +6,8 @@ spring:
 
 # AWS
 aws:
+  cloud-front:
+    base: ${CLOUD_FRONT_BASE}
   s3:
     access-key: ${S3_ACCESS_KEY}
     secret-key: ${S3_SECRET_KEY}
