Add video delete functionality and made azure and aws switchable

--- a/VidFlowWeb/src/main/resources/application-prod.yml
+++ b/VidFlowWeb/src/main/resources/application-prod.yml
@@ -21,3 +21,7 @@ jwt:
     token:
       secret: ${JWT_REFRESH_TOKEN_SECRET}
       expiration: 129600000
+
+logging:
+  level:
+    com.saransh: debug
