--- a/VidFlowWeb/src/main/resources/application.yml
+++ b/VidFlowWeb/src/main/resources/application.yml
@@ -35,3 +35,5 @@ storage:
 
 # Custom
 skipUrls: /api/v1/video,/api/v1/video/trending,/api/v1/video/search,/api/v1/video/id/{videoId},/api/v1/video/views/id/{videoId},/api/v1/video/user/id/{userId},/api/v1/user/id/{userId}/channel,/api/v1/user/id/{userId}/subscribers,/api/v1/user/id/{userId}/subscribers/count
+aws:
+  enable: true
