Update executable property to true

--- a/VidFlowWeb/pom.xml
+++ b/VidFlowWeb/pom.xml
@@ -67,6 +67,7 @@
 				</executions>
 				<configuration>
 					<mainClass>${main-class}</mainClass>
+					<executable>true</executable>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
