Fix 500 error on token refresh endpoint

--- a/VidFlowWeb/src/main/resources/application.yml
+++ b/VidFlowWeb/src/main/resources/application.yml
@@ -22,6 +22,8 @@ auth:
     path: /api/v1/login
   register:
     path: /api/v1/user/register
+  refreshToken:
+    path: /api/v1/user/token/refresh
 jwt:
   issuer: VidFlow
 
