--- a/VidFlowWeb/src/main/resources/application.yml
+++ b/VidFlowWeb/src/main/resources/application.yml
@@ -27,7 +27,10 @@ auth:
 jwt:
   issuer: VidFlow
 
-# Azure Blob Storage
+# Azure
+azure:
+  cdn:
+    baseUrl: ${AZURE_CDN_BASE_URL}
 storage:
   connection:
     string: ${AZURE_STORAGE_CONNECTION_STRING}
@@ -39,7 +42,7 @@ storage:
 aws:
   enable: false
   cloud-front:
-    base: ${CLOUD_FRONT_BASE}
+    baseUrl: ${CLOUD_FRONT_BASE_URL}
   s3:
     access-key: ${S3_ACCESS_KEY}
     secret-key: ${S3_SECRET_KEY}
