--- a/VidFlowWeb/src/main/resources/application.yml
+++ b/VidFlowWeb/src/main/resources/application.yml
@@ -51,5 +51,9 @@ spam:
   engine:
     url: ${SPAM_ENGINE_URL}
 
+recommendation:
+  engine:
+    url: ${RECOMMENDATION_ENGINE_URL}
+
 # Custom
 skipUrls: /api/v2/video,/api/v2/video/trending,/api/v2/video/search,/api/v2/video/recommended,/api/v2/video/user/id/{userId},/api/v2/video/id/{videoId},/api/v2/user/id/{userId}/channel
